--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,26 @@ a {
     font-weight: bold;
 }
 
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+  }
+
+.mapa{
+    align-self: center;
+    text-align: center;
+    width: auto;
+    border-radius: 4px;
+    background-color: none;
+}
+
 .elemento-descripcion {
     font-family: var(--font-primary);
     text-align: justify;
@@ -357,6 +377,15 @@ button {
     padding: none;
     align-self: center;
     align-items: center;
+}
+.contenedor_aceptar{
+    font-size: small;
+    font-weight: lighter;
+    text-align: center;
+    align-items: center;
+    text-wrap: wrap;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .contenedor_input select {
