--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,16 @@ textarea {
     background-color: none;
 }
 
+.container_texto{
+    align-self: center;
+    justify-self: center;
+    text-align: left;
+    padding: 15px;
+    background-color: var(--bg-alpha);
+    max-width: 95%;
+    margin: 50px;
+}
+
 .elemento-descripcion {
     font-family: var(--font-primary);
     text-align: justify;
